--- a/ise-lab-knowledge-representation.tex
+++ b/ise-lab-knowledge-representation.tex
@@ -10,11 +10,11 @@
 %\documentclass[handout]{beamer}\mode<handout>{\usetheme{AMSBolognaFC}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{ise-lab-common}
-\usepackage{ise-lab-template}
+\usepackage{ise-lab-knowledge-representation}
 % version
 \newcommand{\versionmajor}{0}
 \newcommand{\versionminor}{1}
-\newcommand{\versionpatch}{1}
+\newcommand{\versionpatch}{2}
 \newcommand{\version}{\versionmajor.\versionminor.\versionpatch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[\currentLab{} -- Short Title]{
@@ -383,7 +383,7 @@ This template's sources can be used as a simple example of how yo use this Beame
 	\scriptsize
 %	\footnotesize
 	\bibliographystyle{apalike-AMS}
-	\bibliography{ise-lab-template}
+	\bibliography{ise-lab-knowledge-representation}
 \end{frame}
 %/////////
 
