--- a/ise-lab-knowledge-representation.tex
+++ b/ise-lab-knowledge-representation.tex
@@ -14,12 +14,10 @@
 % version
 \newcommand{\versionmajor}{0}
 \newcommand{\versionminor}{1}
-\newcommand{\versionpatch}{2}
+\newcommand{\versionpatch}{3-dev}
 \newcommand{\version}{\versionmajor.\versionminor.\versionpatch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[\currentLab{} -- Short Title]{
-	Long Title
-}
+\title[\currentLab{} -- Knowledge Representation]{Knowledge Representation}
 %
 \subtitle{\courseName{} / Module \moduleN{} (\courseAcronym)}
 %
