fix: short year in bottom-right side of the slides

--- a/ise-lab-knowledge-representation.tex
+++ b/ise-lab-knowledge-representation.tex
@@ -25,7 +25,7 @@
 %
 \institute[\disiShort, \uniboShort]{\disi{} (\disiShort)\\\unibo}
 %
-\date[A.Y. \academicYear{} (v.\ \version)]{Academic Year \academicYear{}\\(version \version)}
+\date[A.Y. \academicYearShort{} (v.\ \version)]{Academic Year \academicYear{}\\(version \version)}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
