chore: intensional vs. extensional

--- a/ise-lab-knowledge-representation.bib
+++ b/ise-lab-knowledge-representation.bib
@@ -1,7 +1,7 @@
 @misc{enwiki:cons,
-	author = "{Wikipedia contributors}",
+	author = "{Wikipedia}",
 	title = "Cons --- {Wikipedia}{,} The Free Encyclopedia",
 	year = "2021",
-	url = "https://en.wikipedia.org/w/index.php?title=Cons&oldid=1049428255",
+	url = "https://en.wikipedia.org/wiki/Cons",
 	note = "[Online; accessed 11-March-2022]"
 }
