--- a/ise-lab-knowledge-representation.sty
+++ b/ise-lab-knowledge-representation.sty
@@ -31,6 +31,7 @@
 \newcommand{\variable}[1]{\mathit{#1}}
 \newcommand{\predication}[1]{\mathit{#1}}
 \newcommand{\consdot}{\functor{~.~}}
+\newcommand{\fullstop}{\mathtt{.}}
 
 \newcommand{\grammar}[1]{\mathsf{#1}}
 \newcommand{\meta}[1]{\grammar{\left\langle#1\right\rangle}}
