chore: describe up to 2p-kt

--- a/ise-lab-knowledge-representation.bib
+++ b/ise-lab-knowledge-representation.bib
@@ -5,3 +5,54 @@
 	url = "https://en.wikipedia.org/wiki/Cons",
 	note = "[Online; accessed 11-March-2022]"
 }
+
+@misc{Ciatto20212pktPresentation,
+    author = "Ciatto, Giovanni",
+    title = "\twopkt{}: A Kotlin Multi-Platform ecosystem for Symbolic AI",
+    year = "2021",
+    url = "https://github.com/tuProlog/2p-kt-presentation/releases/latest",
+    note = "[Online; accessed 11-March-2022]"
+}
+
+@Inbook{Lachiche2010,
+    author="Lachiche, Nicolas",
+    editor="Sammut, Claude
+    and Webb, Geoffrey I.",
+    title="Propositionalization",
+    bookTitle="Encyclopedia of Machine Learning",
+    year="2010",
+    publisher="Springer US",
+    address="Boston, MA",
+    pages="812--817",
+    isbn="978-0-387-30164-8",
+    doi="10.1007/978-0-387-30164-8\_680",
+    url="https://doi.org/10.1007/978-0-387-30164-8_680"
+}
+
+ @inproceedings{dcc-aixia-2021-plp,
+    keywords = {probabilistic logic programming, symbolic AI, 2P-Kt},
+    year = 2021,
+    articleNo = 3,
+    pages = {19-32},
+    author = {Dellaluce, Jason and Calegari, Roberta and Ciatto, Giovanni},
+    sort = {inproceedings},
+    numpages = 14,
+    volume = 3078,
+    issn = {1613-0073},
+    month = {dec},
+    publisher = {Sun SITE Central Europe, RWTH Aachen University},
+    status = {Published},
+    title = {Probabilistic logic programming in 2P-Kt},
+    booktitle = {AIxIA 2021 Discussion Papers},
+    editor = {Mascardi, Viviana and Palmonari, Matteo and Vizzari, Giuseppe},
+    url = {http://ceur-ws.org/Vol-3078/paper-29.pdf},
+    series = {CEUR Workshop Proceedings},
+    subseries = {AI*IA Series}}
+
+@misc{uci:iris,
+    author = "{UCI}, Machine Learning Repository",
+    title = "Iris Dataset",
+    year = "1950",
+    url = "https://archive.ics.uci.edu/ml/datasets/iris",
+    note = "[Online; accessed 11-March-2022]"
+}
