--- a/ise-lab-knowledge-representation.sty
+++ b/ise-lab-knowledge-representation.sty
@@ -29,7 +29,7 @@
 \newcommand{\mgu}[2]{\text{mgu}(#1, #2)}
 \newcommand{\functor}[1]{\mathtt{#1}}
 \newcommand{\variable}[1]{\mathit{#1}}
-\newcommand{\predication}[1]{\mathit{#1}}
+\newcommand{\predication}[1]{\text{\textit{#1}}}
 \newcommand{\consdot}{\functor{~.~}}
 \newcommand{\fullstop}{\mathtt{.}}
 
@@ -44,3 +44,4 @@
 \newcommand{\optional}[1]{\grammar{(#1)}\questionmark}
 
 \newcommand{\twopkt}{\textsc{2P-Kt}}
+
